--- a/01_python_basics/notebooks/variables.ipynb
+++ b/01_python_basics/notebooks/variables.ipynb
@@ -5,10 +5,19 @@
    "execution_count": null,
    "id": "1b3b709d",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "1+1"
-   ]
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -21,13 +30,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "genv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.11"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
