--- a/01_python_basics/notebooks/variables.ipynb
+++ b/01_python_basics/notebooks/variables.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1b3b709d",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "766e7f97",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "ed13d8b3",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "ae7af517",
    "metadata": {},
    "outputs": [],
@@ -146,6 +146,114 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eb6c5dc9",
+   "metadata": {},
+   "source": [
+    "#### **_Constants Variable in Python_**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a13e59f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PI = 3.14159\n",
+    "GRAVITY = 9.8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd8cf902",
+   "metadata": {},
+   "source": [
+    "#### **_Deleting Variables_**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9230b9f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output is:- 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = 100\n",
+    "print(\"Output is:-\", y)\n",
+    "\n",
+    "x = 100\n",
+    "del x\n",
+    "# print(x)  # print(x)  # NameError: name 'x' is not defined"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d73ff7ac",
+   "metadata": {},
+   "source": [
+    "#### **_Advanced Concepts_**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "18f85cde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one element append :- [1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2]       # Create a list 'a' with elements 1 and 2\n",
+    "b = a            # 'b' refers to the same list as 'a' (not a new list)\n",
+    "b.append(3)      # Add 3 to the list using 'b'; this modifies the same list that 'a' points to\n",
+    "print(\"one element append :-\", a)  # Output: one element append :- [1, 2, 3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63da26bc",
+   "metadata": {},
+   "source": [
+    "#### **_id() function_**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "370dc28b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140732920769240\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10           # Assign the integer value 10 to the variable 'x'\n",
+    "print(id(x))     # Print the memory address (or unique ID) of the object that 'x' refers to\n",
+    "\n",
+    "# Output: 9789440 (this will differ every time and per Python implementation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "46a5e6f2",
    "metadata": {},
    "source": [
@@ -159,8 +267,17 @@
     "\n",
     "        1. A global variable is defined outside any function, and it is accessible from any function within the same module.\n",
     "        2. global variable can be accessed and modified inside a function using the global keyword.\n",
+    "\n",
     "- Enclosing — in nested functions\n",
-    "- Built-in — Python’s own keywords/functions"
+    "\n",
+    "        1. This scope refers to variables that are defined in a function and are enclosing another function (i.e., nested functions).\n",
+    "        2. A variable defined in an enclosing function can be accessed by a function inside it (nested function), but it's neither local to the inner function nor global to the entire program.\n",
+    "\n",
+    "- Built-in — Python’s own keywords/functions\n",
+    "\n",
+    "        1. These are the names and functions that are predefined by Python. They are part of Python's standard library and can be used anywhere in your program.\n",
+    "\n",
+    "        2. Examples include functions like print(), len(), and constants like True, False, None."
    ]
   },
   {
@@ -173,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "37cc613a",
    "metadata": {},
    "outputs": [
@@ -195,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "id": "bd149edc",
    "metadata": {},
    "outputs": [
@@ -221,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "id": "0016dfe7",
    "metadata": {},
    "outputs": [
@@ -255,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "0b867429",
    "metadata": {},
    "outputs": [
@@ -278,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "3387acf4",
    "metadata": {},
    "outputs": [
@@ -301,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "4c3e85ea",
    "metadata": {},
    "outputs": [
@@ -329,9 +446,123 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ba2dee2b",
+   "metadata": {},
+   "source": [
+    "#### **_Enclosing Scope (also called Nonlocal Scope):_**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "406f07c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def out_function():\n",
+    "    x = 30  # Local to outer_function (also acts as \"enclosing\" for inner_function)\n",
+    "\n",
+    "    def inn_function():\n",
+    "        print(x)  # Accesses x from outer_function\n",
+    "\n",
+    "    inn_function()\n",
+    "\n",
+    "outer_function()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "406f07c9",
+   "id": "4bfc105a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inner: 50\n",
+      "Outer: 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "def outer_function():\n",
+    "    x = 30  # Local to outer_function, enclosing for inner_function\n",
+    "\n",
+    "    def inner_function():\n",
+    "        nonlocal x  # Declare x is from enclosing scope\n",
+    "        x = 50  # Modify the enclosing variable\n",
+    "        print(\"Inner:\", x)\n",
+    "\n",
+    "    inner_function()\n",
+    "    print(\"Outer:\", x)\n",
+    "\n",
+    "outer_function()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a36deeb9",
+   "metadata": {},
+   "source": [
+    "#### **_Built-in Scope_**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "faefce2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello, World!\")  # 'print' is a built-in function in Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db35a10f",
+   "metadata": {},
+   "source": [
+    "#### **_Mutable vs Immutable Variables_**\n",
+    "\n",
+    "- Mutable: list, dict, set → can change in place\n",
+    "- Immutable: int, float, str, tuple → cannot change in place"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a10dee2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # to be continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49d6ad1e",
    "metadata": {},
    "outputs": [],
    "source": []
