--- a/01_python_basics/notebooks/data_types.ipynb
+++ b/01_python_basics/notebooks/data_types.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 64,
    "id": "4dc05371",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
    "id": "62212478",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 66,
    "id": "3391b17b",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 67,
    "id": "cf2b9684",
    "metadata": {},
    "outputs": [
@@ -146,37 +146,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "ab4ce526",
+   "execution_count": 68,
+   "id": "0c9a5326",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'decimal' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[44], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m getcontext()\u001b[38;5;241m.\u001b[39mprec\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m28\u001b[39m\n\u001b[0;32m      8\u001b[0m getcontext()\u001b[38;5;241m.\u001b[39mrounding \u001b[38;5;241m=\u001b[39m ROUND_HALF_EVEN\n\u001b[1;32m---> 10\u001b[0m total \u001b[38;5;241m=\u001b[39m (\u001b[43mdecimal\u001b[49m(\u001b[38;5;241m19.99\u001b[39m) \u001b[38;5;241m*\u001b[39m decimal(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m3\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mquantize(decimal(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m0.01\u001b[39m\u001b[38;5;124m\"\u001b[39m)))\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(total)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'decimal' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.469\n"
      ]
     }
    ],
    "source": [
     "# Advanced\n",
     "\n",
+    "from decimal import Decimal, getcontext\n",
+    "\n",
+    "getcontext().prec = 4\n",
+    "\n",
+    "x = Decimal(\"1.23456789\")\n",
+    "y = Decimal(\"2\")\n",
+    "\n",
+    "result = x * y\n",
+    "print(result)  # Will apply precision: 2.469\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "486677bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using string: 19.99\n",
+      "Using float : 19.989999999999998436805981327779591083526611328125\n"
+     ]
+    }
+   ],
+   "source": [
     "from decimal import Decimal, getcontext, ROUND_HALF_EVEN\n",
-    "from fractions import  Fraction\n",
+    "\n",
+    "getcontext().prec=4\n",
+    "getcontext().rounding = ROUND_HALF_EVEN\n",
+    "a = Decimal(\"19.99\")\n",
+    "b = Decimal(19.99)\n",
+    "\n",
+    "print(\"Using string:\", a)\n",
+    "print(\"Using float :\", b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "4eb778be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using float:  0.30000000000000004\n",
+      "Using Decimal:  0.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "from decimal import Decimal  # Importing the Decimal class from the decimal module for precise decimal arithmetic\n",
+    "\n",
+    "# Demonstrating floating-point arithmetic in Python\n",
+    "# Floating-point numbers (like 0.1 and 0.2) cannot be represented exactly in binary,\n",
+    "# which often leads to small precision errors in calculations.\n",
+    "print(\"Using float: \", 0.1 + 0.2)  # This will print 0.30000000000000004 instead of 0.3\n",
+    "\n",
+    "# Demonstrating decimal arithmetic using the Decimal module\n",
+    "# Decimal objects preserve exact precision by using base-10 representation.\n",
+    "# This is especially useful for financial or other high-precision applications.\n",
+    "print(\"Using Decimal: \", Decimal(\"0.1\") + Decimal(\"0.2\"))  # This will correctly print 0.3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "1de5395f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using float (0.1 + 0.2): 0.30000000000000004\n",
+      "Is float result equal to 0.3? False\n",
+      "Using Decimal (0.1 + 0.2): 0.3\n",
+      "Is Decimal result equal to 0.3? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "from decimal import Decimal\n",
+    "\n",
+    "# Using float\n",
+    "a_float = 0.1 + 0.2\n",
+    "print(\"Using float (0.1 + 0.2):\", a_float)\n",
+    "print(\"Is float result equal to 0.3?\", a_float == 0.3)\n",
+    "\n",
+    "# Using Decimal\n",
+    "a_decimal = Decimal(\"0.1\") + Decimal(\"0.2\")\n",
+    "print(\"Using Decimal (0.1 + 0.2):\", a_decimal)\n",
+    "print(\"Is Decimal result equal to 0.3?\", a_decimal == Decimal(\"0.3\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "ab4ce526",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "from decimal import Decimal, getcontext, ROUND_HALF_EVEN\n",
+    "from fractions import Fraction\n",
     "import math, numbers\n",
     "\n",
-    "getcontext().prec=28\n",
+    "# Set precision and rounding mode for Decimal\n",
+    "getcontext().prec = 28\n",
     "getcontext().rounding = ROUND_HALF_EVEN\n",
     "\n",
-    "total = (decimal(19.99) * decimal(\"3\").quantize(decimal(\"0.01\")))\n",
+    "# Use Decimal for accurate currency calculation\n",
+    "total = (Decimal(\"19.99\") * Decimal(\"3\")).quantize(Decimal(\"0.01\"))\n",
     "\n",
+    "# Add two exact fractions\n",
+    "ratio = Fraction(1, 3) + Fraction(1, 6)\n",
     "\n",
+    "# Test float comparison using math.isclose (accounts for float imprecision)\n",
+    "print(math.isclose(0.1 + 0.2, 0.3))  # ✅ True — safe float comparison\n",
     "\n",
-    "print(total)"
+    "# Check if 42 is an instance of an integral number type\n",
+    "print(isinstance(42, numbers.Integral))  # ✅ True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "5dfc0da6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using == : 0.1 False\n",
+      "Using math.inclose() : True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# math.isclose() Safely compare two float values\n",
+    "\n",
+    "import math\n",
+    "# Trying to compare two floats using ==\n",
+    "print(\"Using == :\", 0.1, 0.2 == 0.3)   # ❌ False (due to float precision error)\n",
+    "\n",
+    "# Comparing the same floats using math.isclose()\n",
+    "print(\"Using math.inclose() :\",math.isclose(0.1 + 0.2, 0.3))  # ✅ True\n",
+    "\n",
+    "# math.isclose() is helpful when dealing with floating-point math in scientific or ML code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1b51fb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is x an integral number? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# numbers.Integral Check if a value behaves like an int\n",
+    "\n",
+    "import numbers\n",
+    "\n",
+    "# Basic integer check\n",
+    "x = 42\n",
+    "print(\"Is x an integral number?\", isinstance(x,numbers.Integral))  # ✅ True\n",
+    "\n",
+    "# Float should not be considered integral\n",
+    "\n"
    ]
   },
   {
@@ -189,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "838bf4cb",
    "metadata": {},
    "outputs": [
@@ -211,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "e2bc1d8f",
    "metadata": {},
    "outputs": [
@@ -245,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "0f562172",
    "metadata": {},
    "outputs": [
@@ -264,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "361616ba",
    "metadata": {},
    "outputs": [
@@ -286,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "cebdd850",
    "metadata": {},
    "outputs": [
