--- a/01_python_basics/notebooks/data_types.ipynb
+++ b/01_python_basics/notebooks/data_types.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d1b51fb6",
    "metadata": {},
    "outputs": [
@@ -347,8 +347,148 @@
     "x = 42\n",
     "print(\"Is x an integral number?\", isinstance(x,numbers.Integral))  # ✅ True\n",
     "\n",
-    "# Float should not be considered integral\n",
-    "\n"
+    "# Float should not be considered integral"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64ed0e5f",
+   "metadata": {},
+   "source": [
+    "#### Boolean — bool (Theory: bool ⊂ int → True == 1, False == 0; short‑circuiting (and/or) matters.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f9117bfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "dd\n",
+      "False\n",
+      "True\n",
+      "False True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(True + True) #2\n",
+    "\n",
+    "print(\"d\" + \"d\")        # print this one also\n",
+    "\n",
+    "print(bool(\"\"))         # Empty strings (\"\") are considered False\n",
+    "\n",
+    "print(bool([1]))        # Non-empty lists (like [1]) are considered True\n",
+    "\n",
+    "print(bool(\"\"),bool([1]))   # final print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "5fda7230",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Intermediate\n",
+    "\n",
+    "def ping(): \n",
+    "    print(\"ping\") \n",
+    "    return True\n",
+    "\n",
+    "False and ping()   # No call (left side is False)\n",
+    "True or ping()     # No call (left side is True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "3430a9e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Advanced\n",
+    "import numbers\n",
+    "def is_strict_int(x):\n",
+    "    return isinstance(x, numbers.Integral) and not isinstance(x, bool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "23b02be8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data type is Int:- True\n",
+      "Data type is Int :> False\n",
+      "Data type is int :>  True\n",
+      "Data type is int :>  True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# type and isinstance are different\n",
+    "#example \n",
+    "\n",
+    "print(\"Data type is Int:-\", type(1) == int)\n",
+    "print(\"Data type is Int :>\", type(True) == int)\n",
+    "\n",
+    "\n",
+    "# What does isinstance\n",
+    "\n",
+    "print(\"Data type is int :> \",isinstance(1, int))     # True\n",
+    "print(\"Data type is int :> \",isinstance(True, int))    # True ✅ (since bool is a subclass of int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "7df1431f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "<class '__main__.B'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example to Make It Crystal Clear:\n",
+    "class A:\n",
+    "    pass\n",
+    "\n",
+    "class B(A):\n",
+    "    pass\n",
+    "\n",
+    "b = B()\n",
+    "\n",
+    "print(isinstance(b, B))  # True\n",
+    "print(isinstance(b, A))  # True ✅\n",
+    "print(type(b))           # <class '__main__.B'>"
    ]
   },
   {
